samples/_failures_safe/1761160744_fbf49a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25159533.c: In function ‘matrix_input’:
./samples/SAFE/__tmp_25159533.c:129:9: error: expected expression at end of input
  129 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_25159533.c:129:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_25159533.c:129:9: error: expected declaration or statement at end of input
